--- a/ClinicaVeterinaria/web/updateGrupoUsuario.xhtml
+++ b/ClinicaVeterinaria/web/updateGrupoUsuario.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Buscar Grupo de Usuario</title>
+        <title>Actualizar Grupo de Usuario</title>
         <style>
             body {
                 background-image: url("#{resource['images/image8.png']}");
@@ -22,8 +22,8 @@
         <h:form>
             <p:messages id="mensaje" autoUpdate="false" style="blue" />
             <div align="center">
-                <p:fieldset legend="Buscar Grupo de Usuario" style="width:350pt">
-                    <h:panelGrid columns="3" id="pgBuscarGrupo">
+                <p:fieldset legend="Actualizar Grupo de Usuario" style="width:350pt">
+                    <h:panelGrid columns="3" id="pgActualizarGrupo">
                         <p:outputLabel for="txtId" value="ID Grupo: "/>
                         <p:inputText id="txtId" value="#{grupoUsuarioBean.idGrupo}" required="true"
                                      requiredMessage="Campo requerido."/>
@@ -34,10 +34,10 @@
                         <p:message for="txtNombre"/>
 
                         <h:column />
-                        <p:commandButton icon="ui-icon-search" value="Buscar" update="pgBuscarGrupo"
+                        <p:commandButton icon="ui-icon-search" value="Buscar" update="pgActualizarGrupo"
                                          action="#{grupoUsuarioBean.returnGrupoUsuarioByID()}"/>
-                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgBuscarGrupo"
-                                         action="#{grupoUsuarioBean.limpiarDatos()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarGrupo"
+                                         action="#{grupoUsuarioBean.updateGrupoUsuario()}"/>
 
                     </h:panelGrid>
                 </p:fieldset>
