--- a/ClinicaVeterinaria/web/deleteProxVacuna.xhtml
+++ b/ClinicaVeterinaria/web/deleteProxVacuna.xhtml
@@ -45,11 +45,12 @@
                         <p:inputText id="txtDetalles" value="#{proxVacunaBean.detalles}"/>
                         <p:message for="txtDetalles"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarProxVacuna"
                                          action="#{proxVacunaBean.returnProxVacunaByID()}"/>
                         <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarProxVacuna"
                                          action="#{proxVacunaBean.deleteProxVacuna()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarProxVacuna"
+                                         action="#{proxVacunaBean.limpiarDatos()}"/><!--No limpia porque no puede convertir-->
                     </h:panelGrid>
                 </p:fieldset>
             </div>
