--- a/ClinicaVeterinaria/web/deleteUsuario.xhtml
+++ b/ClinicaVeterinaria/web/deleteUsuario.xhtml
@@ -45,11 +45,12 @@
                         <p:inputText id="txtApellido" value="#{usuarioBean.apellido}"/>
                         <p:message for="txtApellido"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarUsuario"
                                          action="#{usuarioBean.returnUsuarioByID()}"/>
                         <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarUsuario"
                                          action="#{usuarioBean.deleteUsuario()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarUsuario"
+                                         action="#{usuarioBean.limpiarDatos()}"/> <!--No limpia  porque no puede convertir-->
                     </h:panelGrid>
                 </p:fieldset>
             </div>
