--- a/ClinicaVeterinaria/web/deleteVacuna.xhtml
+++ b/ClinicaVeterinaria/web/deleteVacuna.xhtml
@@ -37,11 +37,12 @@
                         <p:inputText id="txtDescripcion" value="#{vacunaBean.descripcion}"/>
                         <p:message for="txtDescripcion"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarVacuna"
                                          action="#{vacunaBean.returnVacunaByID()}"/>
                         <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarVacuna"
                                          action="#{vacunaBean.deleteVacuna()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarVacuna"
+                                         action="#{vacunaBean.limpiarDatos()}"/>
                     </h:panelGrid>
                 </p:fieldset>
             </div>
