--- a/ClinicaVeterinaria/web/updateGrupoUsuario.xhtml
+++ b/ClinicaVeterinaria/web/updateGrupoUsuario.xhtml
@@ -33,11 +33,12 @@
                         <p:inputText id="txtNombre" value="#{grupoUsuarioBean.nombreGrupo}"/>
                         <p:message for="txtNombre"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Buscar" update="pgActualizarGrupo"
                                          action="#{grupoUsuarioBean.returnGrupoUsuarioByID()}"/>
                         <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarGrupo"
                                          action="#{grupoUsuarioBean.updateGrupoUsuario()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgActualizarGrupo"
+                                         action="#{grupoUsuarioBean.limpiarDatos()}"/>
 
                     </h:panelGrid>
                 </p:fieldset>
