--- a/ClinicaVeterinaria/web/deleteCliente.xhtml
+++ b/ClinicaVeterinaria/web/deleteCliente.xhtml
@@ -45,11 +45,12 @@
                         <p:inputText id="txtEmail" value="#{clienteBean.email}"/>
                         <p:message for="txtEmail"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarCliente"
                                          action="#{clienteBean.returnClienteByID()}"/>
                         <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarCliente"
                                          action="#{clienteBean.deleteCliente()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarCliente"
+                                             action="#{clienteBean.limpiarDatos()}"/>
                     </h:panelGrid>
                 </p:fieldset>
             </div>
