--- a/ClinicaVeterinaria/web/deleteMedicoVeterinario.xhtml
+++ b/ClinicaVeterinaria/web/deleteMedicoVeterinario.xhtml
@@ -41,11 +41,12 @@
                         <p:inputText id="txtNroRegistro" value="#{medicoVeterinarioBean.nroRegistro}"/>
                         <p:message for="txtNroRegistro"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarMedico"
                                          action="#{medicoVeterinarioBean.returnMedicoVeterinarioByID()}"/>
                         <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarMedico"
                                          actionListener="#{medicoVeterinarioBean.deleteMedicoVeterinario()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarMedico"
+                                         actionListener="#{medicoVeterinarioBean.limpiarDatos()}"/>
                     </h:panelGrid>
                 </p:fieldset>
             </div>
