--- a/ClinicaVeterinaria/web/updateMascota.xhtml
+++ b/ClinicaVeterinaria/web/updateMascota.xhtml
@@ -61,11 +61,12 @@
                         <p:inputText id="txtNroFicha" value="#{mascotaBean.nroFicha}"/>
                         <p:message for="txtNroFicha"/>
 
-                        <h:column />
                         <p:commandButton icon="ui-icon-search" value="Buscar" update="pgActualizarMascota"
                                          action="#{mascotaBean.returnMascotaByID()}"/>
                         <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarMascota"
-                                         action="#{mascotaBean.updateMascota()}"/> <!--No limpia porque no puede convertir string a objeto-->
+                                         action="#{mascotaBean.updateMascota()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgActualizarMascota"
+                                         action="#{mascotaBean.limpiarDatos()}"/> <!--No limpia porque no puede convertir string a objeto-->
                     </h:panelGrid>
                 </p:fieldset>
             </div>
