--- a/ClinicaVeterinaria/web/updateProxVacuna.xhtml
+++ b/ClinicaVeterinaria/web/updateProxVacuna.xhtml
@@ -47,8 +47,8 @@
 
                         <p:commandButton icon="ui-icon-search" value="Buscar" update="pgActualizarProxVacuna"
                                          action="#{proxVacunaBean.returnProxVacunaByID()}"/>
-                        <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarProxVacuna"
-                                         action="#{proxVacunaBean.updateProxVacuna()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarProxVacuna" ajax="false"
+                                         actionListener="#{proxVacunaBean.updateProxVacuna()}"/>
                         <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgActualizarProxVacuna"
                                          action="#{proxVacunaBean.limpiarDatos()}"/><!--No limpia porque no puede convertir-->
                     </h:panelGrid>
