--- a/ClinicaVeterinaria/web/deleteCliente.xhtml
+++ b/ClinicaVeterinaria/web/deleteCliente.xhtml
@@ -47,8 +47,8 @@
 
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarCliente"
                                          action="#{clienteBean.returnClienteByID()}"/>
-                        <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarCliente"
-                                         action="#{clienteBean.deleteCliente()}"/>
+                        <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarCliente" ajax ="false"
+                                         actionListener="#{clienteBean.deleteCliente()}"/>
                         <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarCliente"
                                              action="#{clienteBean.limpiarDatos()}"/>
                     </h:panelGrid>
