--- a/ClinicaVeterinaria/web/deleteMascota.xhtml
+++ b/ClinicaVeterinaria/web/deleteMascota.xhtml
@@ -63,8 +63,8 @@
 
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarMascota"
                                          action="#{mascotaBean.returnMascotaByID()}"/>
-                        <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarMascota"
-                                         action="#{mascotaBean.deleteMascota()}"/> 
+                        <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarMascota" ajax="false"
+                                         actionListener="#{mascotaBean.deleteMascota()}"/> 
                         <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarMascota"
                                          action="#{mascotaBean.limpiarDatos()}"/> <!--No limpia porque no puede convertir string a objeto-->
                     </h:panelGrid>
