--- a/ClinicaVeterinaria/web/deleteMascotaVacuna.xhtml
+++ b/ClinicaVeterinaria/web/deleteMascotaVacuna.xhtml
@@ -55,8 +55,8 @@
 
                         <p:commandButton icon="ui-icon-search" value="Consultar" update="pgEliminarMascotaVacuna"
                                          action="#{mascotaVacunaBean.returnMascotaVacunaByID()}"/>
-                        <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarMascotaVacuna"
-                                         action="#{mascotaVacunaBean.deleteMascotaVacuna()}"/>
+                        <p:commandButton icon="ui-icon-trash" value="Eliminar" update="pgEliminarMascotaVacuna" ajax ="false"
+                                         actionListener="#{mascotaVacunaBean.deleteMascotaVacuna()}"/>
                         <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgEliminarMascotaVacuna"
                                          action="#{mascotaVacunaBean.limpiarDatos()}"/> <!--No limpia porque no puede convertir-->
                     </h:panelGrid>
