--- a/ClinicaVeterinaria/web/updateVacuna.xhtml
+++ b/ClinicaVeterinaria/web/updateVacuna.xhtml
@@ -39,8 +39,8 @@
 
                         <p:commandButton icon="ui-icon-search" value="Buscar" update="pgActualizarVacuna"
                                          action="#{vacunaBean.returnVacunaByID()}"/>
-                        <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarVacuna"
-                                         action="#{vacunaBean.updateVacuna()}"/>
+                        <p:commandButton icon="ui-icon-check" value="Actualizar" update="pgActualizarVacuna" ajax="false"
+                                         actionListener="#{vacunaBean.updateVacuna()}"/>
                         <p:commandButton icon="ui-icon-check" value="Limpiar" update="pgActualizarVacuna"
                                          action="#{vacunaBean.limpiarDatos()}"/>
                     </h:panelGrid>
